[workspace]
members = ["scripts", "hub", "modules/*", "packages/*"]

[workspace.dependencies]

# Internal
cosmos-adventures-hub = { path = "./hub" }
minter = { path = "./modules/minter" }

# Dependencies for interface
cw-orch = { version = "0.20.1" }

# External
speculoos = "0.11.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
clap = { version = "4.3.7", features = ["derive"] }
thiserror = { version = "1.0.50" }
schemars = "0.8"
semver = { version = "1.0" }
anyhow = "1.0.79"

# Cosmwasm
cosmwasm-std = { version = "1.5.3" }
cosmwasm-schema = { version = "1.5.3" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.1.0"
cw-asset = { version = "3.0.0" }

# NFTs
cw721-base = { version = "0.15.0", features = ["library"] }
cw721-metadata-onchain = "0.15.0"
cw721 = "0.15.0"

# Abstract
abstract-app = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-adapter = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-sdk = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-core = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-ibc-host = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc", default-features = false }
abstract-interface = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-client = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-interchain-tests = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }

polytone = { package = "abstract-polytone", version = "1.0.0" }
abstract-cw-orch-polytone = { version = "1.0.4" }


[patch.crates-io]
abstract-core = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-sdk = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-manager = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-version-control = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-ibc-client = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-ibc-host = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-adapter = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-module-factory = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-account-factory = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
abstract-interface = { git = "https://github.com/AbstractSDK/abstract", branch = "feature/module-ibc" }
