[package]
name = "cosmos-adventures-hub"
version = "0.0.1"
authors = [
  "CyberHoward <cyberhoward@protonmail.com>",
  "Adair <adair@abstract.money>",
  "Abstract Money <contact@abstract.money>",
]
edition = "2021"
homepage = ""
documentation = ""
repository = ""
license = "GPL-3.0-or-later"
keywords = ["cosmos", "cosmwasm", "abstractsdk"]
resolver = "2"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib", "rlib"]

[[example]]
name = "schema"
required-features = ["schema"]

[[example]]
name = "local_daemon"
required-features = ["daemon"]

[[example]]
name = "publish"
required-features = ["daemon"]

[features]
default = ["export"]
export = []
schema = ["abstract-adapter/schema"]
interface = [
  "export",
  "dep:cw-orch",
  "dep:abstract-interface",
  "dep:abstract-client",
  "dep:semver",
]
daemon = ["interface", "cw-orch/daemon"]

[dependencies]
cosmwasm-std = { version = "1.5.3" }
cosmwasm-schema = { version = "1.5.3" }
cw-controllers = { version = "1.1.2" }
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0.50" }
schemars = "0.8"
cw-asset = { version = "3.0.0" }
abstract-adapter = { version = "0.22.1" }
abstract-sdk = { version = "0.22.1" }
abstract-ibc-host = { version = "0.22.1", default-features = false }

# Dependencies for interface
polytone = { package = "abstract-polytone", version = "1.0.0" }
cw-orch = { workspace = true, optional = true }
abstract-interface = { version = "0.22.1", optional = true }
abstract-client = { version = "0.22.1", optional = true }
cw721-base = { version = "0.15.0", features = ["library"] }
cw721-metadata-onchain = "0.15.0"
cw721 = "0.15.0"
semver = { version = "1.0", optional = true }
common = { version = "0.1.0", path = "../packages/common" }

[dev-dependencies]
cosmos-adventures-hub = { path = ".", features = ["interface"] }
abstract-client = { version = "0.22.1" }
abstract-adapter = { version = "0.22.1", features = ["test-utils"] }
speculoos = "0.11.0"
semver = "1.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
cw-orch = { workspace = true }
clap = { version = "4.3.7", features = ["derive"] }
