[package]
name = "ca-scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]

[dependencies]
cw-orch = { workspace = true }
cw-orch-interchain = { version = "0.1.0" }

# NFT
cw721 = { workspace = true }
cw721-base = { workspace = true }
cw721-metadata-onchain = { workspace = true }

# Cosmwasm
cosmwasm-std = { workspace = true }
cosmwasm-schema = { workspace = true }

# Internal
cosmos-adventures-hub = { workspace = true, features = ["interface"] }
minter = { workspace = true, features = ["interface"] }

# External
env_logger = { workspace = true }
anyhow = { workspace = true }

# Abstract
abstract-interface = { workspace = true }
abstract-sdk = { workspace = true }
abstract-client = { workspace = true }
abstract-adapter = { workspace = true }
abstract-cw-orch-polytone = { workspace = true }
polytone = { workspace = true }
abstract-ibc-host.workspace = true

abstract-interchain-tests = { version = "0.22.1" }
